2009-10-18 Braden McDaniel  <braden@endoframe.com>

	Make throw_runtime_error_from_win32_system_error available to
	other translation units.

	* src/Makefile.am
	* src/libopenvrml/openvrml/local/conf.cpp
	* src/libopenvrml/openvrml/local/error.cpp
	* src/libopenvrml/openvrml/local/error.h

2009-10-05 Braden McDaniel  <braden@endoframe.com>

	* Makefile.am (VISUALC9_0_FILES): Added openvrml-dl.vcproj to the
	distribution.

2009-08-13 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.3 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* src/Makefile.am: Updated libopenvrml library version to 9:2:0.

2009-08-10 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/local/float.h: Removed obsolete include
	of <boost/concept_check.hpp>.

2009-08-07 Braden McDaniel  <braden@endoframe.com>

	Fixes for building on Windows.

	* src/local/libopenvrml-dl/openvrml/local/dl.cpp
	(openvrml::local::dl::foreachfile(const
	std::vector<boost::filesystem::path> &, int (*)(const
	std::string&, void *), void *)): Removed obsolete typedef.
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj:
	Added libopenvrml-dl source directory to include path.

2009-08-07 Braden McDaniel  <braden@endoframe.com>

	Modified openvrml::local::dl interface to use
	boost::filesystem::path and std::string.

	* src/Makefile.am
	(local_libopenvrml_dl_la_LIBADD): Added libboost_filesystem
	dependency.
	* src/libopenvrml/openvrml/local/conf.cpp
	(openvrml::local::conf::datadir()): Return a
	boost::filesystem::path.
	(openvrml::local::conf::node_path()): Return a std::vector of
	boost::filesystem::path to represent the node module search path.
	(openvrml::local::conf::script_path()): Return a std::vector of